feat: resign some layout and fragment

--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -76,7 +76,7 @@
                 android:layout_height="15dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Increase quantity"
-                android:src="@drawable/ic_add" />
+                android:src="@drawable/ic_plus" />
 
         </LinearLayout>
 
