--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -54,11 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/g_blue"
+        android:backgroundTint="@color/black"
         android:text="Sort &amp; Filter"
         android:textColor="@color/white"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        style="@style/p"
         app:icon="@drawable/align_bot"
         app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
