--- a/app/src/main/res/drawable/ic_cart.xml
+++ b/app/src/main/res/drawable/ic_cart.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M11,9h2L13,6h3L16,4h-3L13,1h-2v3L8,4v2h3v3zM7,18c-1.1,0 -1.99,0.9 -1.99,2S5.9,22 7,22s2,-0.9 2,-2 -0.9,-2 -2,-2zM17,18c-1.1,0 -1.99,0.9 -1.99,2s0.89,2 1.99,2 2,-0.9 2,-2 -0.9,-2 -2,-2zM7.17,14.75l0.03,-0.12 0.9,-1.63h7.45c0.75,0 1.41,-0.41 1.75,-1.03l3.86,-7.01L19.42,4h-0.01l-1.1,2 -2.76,5L8.53,11l-0.13,-0.27L6.16,6l-0.95,-2 -0.94,-2L1,2v2h2l3.6,7.59 -1.35,2.45c-0.16,0.28 -0.25,0.61 -0.25,0.96 0,1.1 0.9,2 2,2h12v-2L7.42,15c-0.13,0 -0.25,-0.11 -0.25,-0.25z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M468.39,217.78h-94q-12.75,0 -21.37,-8.67 -8.63,-8.68 -8.63,-21.5 0,-12.83 8.63,-21.33 8.62,-8.5 21.37,-8.5h94v-93q0,-12.75 8.68,-21.37 8.67,-8.63 21.5,-8.63 12.82,0 21.32,8.63 8.5,8.62 8.5,21.37v93h93q12.75,0 21.38,8.68 8.62,8.67 8.62,21.5 0,12.82 -8.62,21.32 -8.63,8.5 -21.38,8.5h-93v93q0,12.75 -8.67,21.38 -8.68,8.62 -21.5,8.62 -12.83,0 -21.33,-8.62 -8.5,-8.63 -8.5,-21.38v-93ZM289.79,886.22Q260,886.22 239,865.01q-21,-21.22 -21,-51 0,-29.79 21.21,-50.79t51,-21q29.79,0 50.79,21.21t21,51q0,29.79 -21.21,50.79t-51,21ZM693.79,886.22Q664,886.22 643,865.01q-21,-21.22 -21,-51 0,-29.79 21.21,-50.79t51,-21q29.79,0 50.79,21.21t21,51q0,29.79 -21.21,50.79t-51,21ZM136.04,146.22L92,146.22q-15.39,0 -25.81,-10.43 -10.41,-10.43 -10.41,-25.85 0,-15.41 10.41,-25.79Q76.61,73.78 92,73.78h64.74q11.83,0 21.91,5.79t14.13,16.3L349.13,431h286.3l146.35,-254.83q4.57,-8.13 13.23,-13.26 8.66,-5.13 18.88,-5.13 20.85,0 31.16,17.11 10.3,17.11 0.6,35.5L710.04,463.61q-12.13,20.13 -30.79,32.76Q660.59,509 637.31,509L338.35,509l-52.05,97.78L736,606.78q15.39,0 25.81,10.43 10.41,10.43 10.41,25.85 0,15.41 -10.41,25.79 -10.42,10.37 -25.81,10.37L284,679.22q-41.62,0 -62.98,-33.11 -21.37,-33.11 -2.67,-67.5L280.65,464 136.04,146.22Z"
+      android:fillColor="#000"/>
 </vector>
