--- a/app/src/main/res/drawable/ic_plus.xml
+++ b/app/src/main/res/drawable/ic_plus.xml
@@ -1,9 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#000000"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+    android:viewportWidth="660"
+    android:viewportHeight="660">
+    <group android:translateX="-150" android:translateY="-150">
+        <path
+            android:pathData="M440.39,519.61L225.48,519.61q-16.71,0 -28.16,-11.5t-11.45,-28.29q0,-16.78 11.45,-28.1 11.45,-11.33 28.16,-11.33h214.91v-214.91q0,-16.64 11.5,-28.41t28.29,-11.77q16.78,0 28.1,11.77 11.33,11.77 11.33,28.41v214.91h214.91q16.64,0 28.41,11.5t11.77,28.29q0,16.78 -11.77,28.1 -11.77,11.33 -28.41,11.33L519.61,519.61v214.91q0,16.71 -11.5,28.16t-28.29,11.45q-16.78,0 -28.1,-11.45 -11.33,-11.45 -11.33,-28.16v-214.91Z"
+            android:fillColor="#000"/>
+    </group>
 </vector>
