--- a/app/src/main/res/drawable/ic_print.xml
+++ b/app/src/main/res/drawable/ic_print.xml
@@ -1,5 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M19,3h-4.18C14.4,1.84 13.3,1 12,1c-1.3,0 -2.4,0.84 -2.82,2L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM12,3c0.55,0 1,0.45 1,1s-0.45,1 -1,1 -1,-0.45 -1,-1 0.45,-1 1,-1zM14,17L7,17v-2h7v2zM17,13L7,13v-2h10v2zM17,9L7,9L7,7h10v2z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="860"
+    android:viewportHeight="860">
+<group android:translateX="-50" android:translateY="-50">
+  <path
+      android:pathData="M332.31,820q-29.83,0 -51.07,-21.24Q260,777.52 260,747.69L260,660h-76.15q-29.83,0 -51.07,-21.24 -21.24,-21.24 -21.24,-51.07v-155.38q0,-42.5 29.04,-71.25t70.96,-28.75h536.92q42.5,0 71.25,28.75t28.75,71.25v155.38q0,29.83 -21.24,51.07Q805.98,660 776.15,660L700,660v87.69q0,29.83 -21.24,51.07Q657.52,820 627.69,820L332.31,820ZM183.85,600L260,600q0.77,-29.15 21.78,-49.96 21.02,-20.81 50.53,-20.81h295.38q29.51,0 50.52,20.81Q699.23,570.85 700,600h76.15q5.39,0 8.85,-3.46t3.46,-8.85v-155.38q0,-17 -11.5,-28.5t-28.5,-11.5L211.54,392.31q-17,0 -28.5,11.5t-11.5,28.5v155.38q0,5.39 3.46,8.85t8.85,3.46ZM640,332.31v-107.69q0,-5.39 -3.46,-8.85t-8.85,-3.46L332.31,212.31q-5.39,0 -8.85,3.46t-3.46,8.85v107.69h-60v-107.69q0,-29.83 21.24,-51.07 21.24,-21.24 51.07,-21.24h295.38q29.83,0 51.07,21.24Q700,194.79 700,224.62v107.69h-60ZM712.31,492.31q17,0 28.5,-11.5t11.5,-28.5q0,-17 -11.5,-28.5t-28.5,-11.5q-17,0 -28.5,11.5t-11.5,28.5q0,17 11.5,28.5t28.5,11.5ZM640,747.69v-146.15q0,-5.39 -3.46,-8.85t-8.85,-3.46L332.31,589.23q-5.39,0 -8.85,3.46t-3.46,8.85v146.15q0,5.39 3.46,8.85t8.85,3.46h295.38q5.39,0 8.85,-3.46t3.46,-8.85ZM183.85,392.31L171.54,392.31h616.92L183.85,392.31Z"
+      android:fillColor="#000000"/>
+</group>
 </vector>
