--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dashboardFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,13 +9,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -23,155 +24,173 @@
                 android:id="@+id/todayDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                 android:text="23 Desember 2024"
-                android:layout_marginTop="40dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/userName"
+                style="@style/h3_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hello, Aldy Satria"
-                android:textSize="20dp"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/todayDate"/>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardViewTop"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
-                app:cardElevation="2dp"
-                app:cardCornerRadius="10dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/userName"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <TextView
-                    android:id="@+id/topTotal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Produk Terlaris"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"
-                    android:layout_margin="18dp"
-                    android:layout_gravity="center|top"/>
-
-                <TextView
-                    android:id="@+id/topText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Produk Terlaris"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:layout_marginHorizontal="18dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardViewUnpaid"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
-                app:cardElevation="2dp"
-                app:cardCornerRadius="10dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/userName"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <TextView
-                    android:id="@+id/unpaidTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pesanan Belum Lunas"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center|top"/>
-                <TextView
-                    android:id="@+id/unpaidText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Unpaid"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:layout_marginHorizontal="18dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"/>
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toBottomOf="@id/todayDate" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/constraintLayout">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardViewOmzet"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
+                android:id="@+id/cardViewTop"
+                android:layout_width="0dp"
+                android:layout_marginTop="4dp"
+                android:layout_height="110dp"
+                android:layout_marginHorizontal="4dp"
+                android:background="@color/primary"
+                app:cardBackgroundColor="@color/black"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="0dp"
+                app:layout_constraintEnd_toStartOf="@id/cardViewUnpaid"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/topTotal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|top"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Total Transaksi \nHari ini"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/topText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewUnpaid"
+                android:layout_marginTop="4dp"
+                android:layout_width="0dp"
+                android:layout_height="110dp"
+                android:layout_marginHorizontal="4dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="2dp"
-                app:cardCornerRadius="10dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/cardViewTop"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/unpaidTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|top"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Pesanan \nBelum Lunas"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/unpaidText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewOmzet"
+                android:layout_width="0dp"
+                android:layout_marginBottom="4dp"
+                android:layout_height="110dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="4dp"
+                app:cardCornerRadius="8dp"
+                app:layout_constraintEnd_toStartOf="@id/cardViewProfit"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardViewTop"
+                app:layout_constraintBottom_toBottomOf="parent">
+
 
                 <TextView
                     android:id="@+id/omzetTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Omzet Hari Ini"
-                    android:textSize="14sp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="12dp"
+                    android:text="Total Omzet\nHari Ini"
                     android:textColor="@color/black"
-                    android:layout_margin="18dp"
-                    android:layout_gravity="center|top"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/omzetText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Omzet"
-                    android:textSize="20sp"
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginBottom="16dp"
                     android:textColor="@color/black"
-                    android:layout_marginHorizontal="18dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"/>
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardViewProfit"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
+                android:layout_width="0dp"
+                android:layout_height="110dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="2dp"
-                app:cardCornerRadius="10dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/cardViewOmzet"
+                app:layout_constraintTop_toBottomOf="@id/cardViewUnpaid"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <TextView
                     android:id="@+id/profitTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profit Bulan Ini"
-                    android:textSize="14sp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Total Profit\nBulan Ini"
                     android:textColor="@color/black"
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center|top"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/profitText"
+                    style="@style/h3_bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Profit"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:layout_marginHorizontal="18dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="start|bottom"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginBottom="16dp"
+                    android:textColor="@color/black" />
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -179,64 +198,66 @@
             android:id="@+id/cardViewChart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            app:cardElevation="2dp"
-            app:cardCornerRadius="10dp"
+            android:layout_marginHorizontal="4dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/constraintLayout2">
+            android:layout_marginBottom="4dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="2dp"
+            app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:orientation="vertical"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/TitleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Grafik Penjualan Harian"
-                    android:textSize="20sp"
                     android:layout_marginStart="15dp"
-                    android:textColor="@color/black"/>
+                    android:text="Grafik Penjualan Harian"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
                 <RadioGroup
                     android:id="@+id/radioGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_marginStart="15dp"
                     android:checkableBehavior="single"
-                    android:layout_marginStart="15dp">
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/radioButtonDaily"
+                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Harian"
-                        android:checked="true"
-                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
-                        android:button="@null"
                         android:background="?attr/selectableItemBackground"
+                        android:button="@null"
+                        android:checked="true"
                         android:padding="16dp"
+                        android:text="Harian"
                         android:textColor="?android:textColorPrimary" />
 
                     <RadioButton
                         android:id="@+id/radioButtonMonthly"
+                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bulanan"
-                        style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
-                        android:button="@null"
                         android:background="?attr/selectableItemBackground"
+                        android:button="@null"
                         android:padding="16dp"
+                        android:text="Bulanan"
                         android:textColor="?android:textColorPrimary" />
                 </RadioGroup>
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/chart"
-                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -246,9 +267,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
