--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -131,10 +131,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/g_blue"
+        android:backgroundTint="@color/black"
         app:tint="@color/white"
         android:contentDescription="Tambah Produk"
-        android:src="@drawable/ic_add"/>
+        android:src="@drawable/ic_plus"/>
 
     <ProgressBar
         android:id="@+id/product_progress_bar"
