--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -38,41 +38,43 @@
 
     <AutoCompleteTextView
         android:id="@+id/customer_dropdown"
-        android:layout_width="250dp"
+        style="@style/h4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title"
-        app:layout_constraintStart_toStartOf="@id/guideline"
         android:layout_marginTop="16dp"
-        android:hint="Cari Nama Pelanggan" />
+        android:layout_marginEnd="12dp"
+        android:hint="Cari Nama Pelanggan"
+        app:layout_constraintEnd_toStartOf="@id/button_add_customer"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_add_customer"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="44dp"
+        android:layout_height="46dp"
         android:layout_marginTop="16dp"
-        android:text="+"
-        style="@style/blueButtonStyle"
-        app:layout_constraintStart_toEndOf="@id/customer_dropdown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title"/>
+        android:drawableTop="@drawable/ic_plus"
+        android:drawableTint="@color/black"
+        android:paddingTop="11dp"
+        app:layout_constraintEnd_toStartOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title" />
 
     <TextView
         android:id="@+id/customer_data_title"
+        style="@style/h3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Data Pelanggan"
-        style="@style/h3"
-        app:layout_constraintTop_toBottomOf="@id/customer_dropdown"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintTop_toBottomOf="@id/customer_dropdown" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_customer_data"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/customer_data_title">
@@ -84,96 +86,97 @@
 
             <TextView
                 android:id="@+id/customer_name_title"
+                style="p_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="8dp"
                 android:text="Nama Pelanggan"
-                android:textSize="12sp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/customer_name_text"
+                style="@style/p_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_name_title"
-                app:layout_constraintStart_toStartOf="parent"
-                style="@style/p_bold"
                 android:inputType="text"
-                tools:ignore="Autofill,LabelFor"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_name_title"
+                tools:ignore="Autofill,LabelFor" />
 
             <TextView
                 android:id="@+id/customer_address_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_name_text"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="20dp"
                 android:text="Alamat"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_name_text" />
 
             <EditText
                 android:id="@+id/customer_address_text"
+                style="@style/p_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_address_title"
-                app:layout_constraintStart_toStartOf="parent"
-                style="@style/p_bold"
                 android:inputType="text"
-                tools:ignore="Autofill,LabelFor"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_address_title"
+                tools:ignore="Autofill,LabelFor" />
 
             <TextView
                 android:id="@+id/customer_hp_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_address_text"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="20dp"
                 android:text="Nomor HP"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_address_text" />
 
             <EditText
                 android:id="@+id/customer_hp_text"
+                style="@style/p_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_hp_title"
-                app:layout_constraintStart_toStartOf="parent"
-                style="@style/p_bold"
                 android:inputType="text"
-                tools:ignore="Autofill,LabelFor"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_hp_title"
+                tools:ignore="Autofill,LabelFor" />
 
             <TextView
                 android:id="@+id/edit_data_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/customer_hp_text"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="20dp"
                 android:text="Terdapat kesalahan data pelanggan?"
-                android:textColor="#ff0000"/>
+                android:textColor="#ff0000"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/customer_hp_text" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_edit_data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/edit_data_title"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="10dp"
                 style="@style/blueButtonStyle"
-                android:text="Edit"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Edit"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edit_data_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_to_checkout"
+        style="@style/blueButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@id/card_view_customer_data"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="10dp"
         android:text="Selanjutnya"
-        style="@style/blueButtonStyle"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/card_view_customer_data" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
