--- a/app/src/main/res/layout/history_list_layout.xml
+++ b/app/src/main/res/layout/history_list_layout.xml
@@ -16,11 +16,11 @@
 
         <TextView
             android:id="@+id/customer_text"
-            style="@style/p_bold"
+            style="@style/h4_bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingBottom="2dp"
-            android:text="Elham Syahrian Putra"
+            android:text="Customer"
             android:textColor="@color/text_primary"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@id/cap_lunas"
@@ -61,7 +61,7 @@
             style="@style/p_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rp8.000"
+            android:text="Rp0"
             android:layout_marginStart="4dp"
             app:layout_constraintStart_toEndOf="@id/balance_text"
             app:layout_constraintTop_toBottomOf="@id/date_text"/>
@@ -82,7 +82,7 @@
             android:layout_marginStart="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rp100.000"
+            android:text="Rp0"
             app:layout_constraintStart_toEndOf="@id/total_text"
             app:layout_constraintTop_toBottomOf="@id/date_text" />
 
