--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#f8f8f8</color>
+    <color name="background">#fcfcfc</color>
 
     <color name="primary">#454545</color>
     <color name="secondary">#ededed</color>
@@ -9,12 +9,8 @@
     <color name="text_secondary">#7f7f7f</color>
 
 
-
-
-
-
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#111111</color>
+    <color name="white">#fcfcfc</color>
 
     <color name="g_gray700">#666666</color>
     <color name="g_black">#171717</color>
